to delete or undelete multiple messages.

** The URL package accepts now the protocols "ssh", "scp" and "rsync".
When `url-handler-mode' is enabled, file operations for these
protocols as well as for "telnet" and "ftp" are passed to Tramp.

** Obsolete packages

---
*** gulp.el


* New Modes and Packages in Emacs 24.5


* Incompatible Lisp Changes in Emacs 24.5


* Lisp Changes in Emacs 24.5

+++
** You can specify a function's interactive-only property via `declare'.
However you specify it, the property affects `describe-function' output.


* Changes in Emacs 24.5 on Non-Free Operating Systems


* Installation Changes in Emacs 24.4

---
** Emacs can now be compiled with ACL support.
This happens by default if a suitable support library is found at
build time, like libacl on GNU/Linux.  To prevent this, use the
configure option `--disable-acl'.  See below for related features.

---
** Emacs can now be compiled with file notification support.
This happens by default if a suitable system library is found at
build time.  To prevent this, use the configure option
`--without-file-notification'.  See below for file-notify features.
This feature is not available for the Nextstep port.

---
** Emacs can now be compiled with zlib support.
This happens by default if zlib is present, which it normally is.
To prevent this, use the configure option `--without-zlib'.
This provides the function `zlib-decompress-region'; see below for details.

---
** The configure option `--without-compress-info' has been generalized,
and renamed to `--without-compress-install'.  It now prevents compression
of _any_ files during installation.

---
** The configure option `--with-crt-dir' has been removed.
It is no longer needed, as the crt*.o files are no longer linked specially.

---
** Directories passed to configure option `--enable-locallisppath' are
no longer created during installation.

---
** Emacs for NS (Mac OS X, GNUstep) can be built with ImageMagick support.