@@ -1,3 +1,8 @@
+2014-04-09  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* subr.el (with-silent-modifications): Don't bind deactivate-mark,
+	buffer-file-name, and buffer-file-truename any more.
+
 2014-04-08  Leo Liu  <sdl.web@gmail.com>
 
 	Use lexical-binding and require cl-lib.
