@@ -1,3 +1,10 @@
+2014-04-09  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* insdel.c (prepare_to_modify_buffer_1): Cancel lock-file checks and
+	region handling (and don't call signal_before_change) if
+	inhibit_modification_hooks is set.
+	(signal_before_change): Don't check inhibit_modification_hooks any more.
+
 2014-04-08  Daniel Colascione  <dancol@dancol.org>
 
 	* alloc.c (sweep_symbols, mark_object): Assert that symbol
